--- a/TP5/application.yml
+++ b/TP5/application.yml
@@ -31,7 +31,7 @@ spring:
     activate:
       on-profile: mysql
   datasource:
-    url: jdbc:mysql://localhost:3306/empleados_db?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/empleados_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: empleados_user
     password: empleados_pass
